@@ -11,13 +11,82 @@ AITM is an open-source SQL query engine specialized in what-if analysis, buildin
 back-end developers make the most of any SQL database, and front-end developers easily configure their own metrics in
 the UI.
 
-- AITM is a middleware between [different popular SQL databases](#compatibility) and multiple clients/front end
-- It builds [queries that were not possible or cumbersome in SQL](./QUERY.md#complex-comparison)
-- It helps front-end developers run SQL queries in their own language in [TypeScript](https://www.typescriptlang.org/)
+- AITM is a middleware between [a SQL database](#compatibility) and multiple clients/front end. Heavy computation is delegated to the underlying database. 
+- It makes [calculations that were not possible or cumbersome in SQL] easy to perform. See [comparison measures](./QUERY.md#complex-comparison)
+- It helps front-end developers build and run SQL queries in their own language in [TypeScript](https://www.typescriptlang.org/)
+
+![test6](https://user-images.githubusercontent.com/5783183/210366738-06007ce4-a46a-4b14-b01c-d58de933c5d9.gif)
 
 ## Compatibility
 
 AITM is currently compatible with [Apache Spark](https://spark.apache.org/), [ClickHouse](https://clickhouse.com/) and [BigQuery](https://cloud.google.com/bigquery/). 
+
+### Configuration
+
+To connect AITM to your database you will first have to import the associated maven module and defined in your 
+java project a `QueryEngine` and `Datasatore` by picking the correct implementations. Then declare a bean that returns 
+the `QueryEngine` instance.
+
+Find a ready-to-use example with Apache Spark and Spring Boot [here](https://github.com/paulbares/aitm-sandbox).
+
+#### Apache Spark
+
+Maven
+```xml
+<dependency>
+  <groupId>me.paulbares</groupId>
+  <artifactId>aitm-spark</artifactId>
+  <version>${aitm.version}</version>
+</dependency>
+```
+
+Java
+```
+SparkSession sparkSession = ...;// to be defined
+SparkDatastore ds = new SparkDatastore(sparkSession);
+SparkQueryEngine qe = new SparkQueryEngine(ds);
+```
+
+#### ClickHouse
+
+Maven
+```xml
+<dependency>
+  <groupId>me.paulbares</groupId>
+  <artifactId>aitm-clickhouse</artifactId>
+  <version>${aitm.version}</version>
+</dependency>
+```
+
+Java
+```
+String jdbcUrl = ...; // to be defined
+String databaseName = ...;// to be defined
+ClickHouseDatastore ds = new ClickHouseDatastore(jdbcUrl, databaseName);
+ClickHouseQueryEngine qe = new ClickHouseQueryEngine(ds);
+```
+
+#### BigQuery
+
+Maven
+```xml
+<dependency>
+  <groupId>me.paulbares</groupId>
+  <artifactId>aitm-bigquery</artifactId>
+  <version>${aitm.version}</version>
+</dependency>
+```
+
+Java
+```
+ServiceAccountCredentials credentials = ...; // to be defined
+String projectId = ...; // to be defined
+String datasetName = ...;// to be defined
+BigQueryDatastore ds = new BigQueryDatastore(credentials, projectId, datasetName);
+BigQueryQueryEngine qe = new BigQueryQueryEngine(ds);
+```
+
+See how to create a [credentials object in BigQuery documentation](https://cloud.google.com/bigquery/docs/authentication/service-account-file)
 
 ## API
 
@@ -26,10 +95,10 @@ AITM exposes two http endpoints to interrogate your database.
 1. `GET  /metadata`: to retrieve the list of tables and fields available
 2. `POST /query`: to execute queries that accepts a json object representing the query to execute
 
-To use those endpoints, AITM provides a [TypeScript](https://www.typescriptlang.org/) library with all you need:
+To use those endpoints, AITM provides a [TypeScript](https://www.typescriptlang.org/) library with all you need available [here](https://www.npmjs.com/package/@aitm1/aitm-js):
 
 ```typescript
-import {count, from, Querier} from "aitm-js-query"
+import {count, from, Querier} from "@aitm1/aitm-js"
 
 const querier = new Querier("http://localhost:8080");
 
@@ -61,23 +130,6 @@ You need to have Java 17:
 If you need to build the TypeScript library locally, you need to have Node installed.
 
 - [Node.js](https://nodejs.org/)
-
-## Getting started
-
-- Install prerequisites (see above)
-- Build the project
-
-```
-mvn -pl :aitm-sandbox -am clean install -DskipTests -Pspring-boot
-```
-
-- Launch the project with the following command.
-
-```
-java --add-opens=java.base/sun.nio.ch=ALL-UNNAMED -Ddataset.path=sandbox/src/main/resources/data/saas.csv -jar sandbox/target/aitm-sandbox-0.1-SNAPSHOT.jar
-```
-
-Server address is: `http://localhost:8080`. Once the server is up and running, you can start [executing queries](./QUERY.md).  
 
 ## Testing
 
